mongo/mongo-ex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexp-deployment
  labels:
    app: mongoexp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexp
  
  template:
    metadata:
      labels:
        app: mongoexp
    spec:
      containers:
        - name: mongoexp
          image: mongo-express
          ports:
            - containerPort: 8081
