mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace : kubernetes-dashboard
spec:
  rules:
    - host: mongoexp.com
      http:
        paths:
        - backend: 
            serviceName:  kubernetes-dashboard
            servicePort: 80
